postman collection added

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=8080
-MONGO_URI=mongodb://localhost:27017/den-news
+MONGO_URI=mongodb+srv://akbarshoxdev:akbarshox-pass@cluster.uplk4jf.mongodb.net/den-news
